# weather_fetcher

./: Cargo.toml  LICENSE  README.md
src/: config.rs  db.rs  fetch.rs  main.rs
