[package]
name = "weather_fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"
